# tessera

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/gui-tauri/: README.md  package-lock.json  package.json
apps/gui-tauri/src/: App.smoke.test.tsx  App.tsx  ipc.ts  styles.css  types.ts  view-model.test.ts  view-model.ts
apps/gui-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/gui-tauri/src-tauri/capabilities/: default.json
apps/gui-tauri/src-tauri/permissions/: gui-spike.toml
apps/gui-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli_contract.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/tests/: client_contract.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/config/tests/: config_contract.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/tests/: conversation_engine_contract.rs
crates/core/tests/fixtures/: mock_trace.jsonl
crates/gui-bindings/: Cargo.toml  README.md
crates/gui-bindings/src/: lib.rs  main.rs
crates/gui-bindings/tests/: bindings_contract.rs
crates/gui-bridge/: Cargo.toml  README.md
crates/gui-bridge/src/: lib.rs
crates/gui-bridge/tests/: gui_bridge_contract.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: lib.rs
crates/protocol/tests/: protocol_contract.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: lib.rs  ollama.rs  openai_compatible.rs
crates/providers/tests/: live_smoke.rs  mock_provider_contract.rs  ollama_contract.rs  openai_compatible_contract.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs
crates/storage/tests/: trace_store_contract.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: lib.rs
crates/tui/tests/: tui_contract.rs
docs/: architecture.md  crate-boundaries.md  deepseek-tui-lessons.md  distribution-plan.md  global-plan.md  gui-ready-architecture.md  manual-testing-v0.1.md  protocol-v0.md  real-provider-test-questions-zh.md  reasonix-lessons.md  requirements.md  technical-architecture.md  trace-schema-v0.md  v0.1-plan.md  v0.1-release-checklist.md
docs/adr/: ADR-001-gui-architecture-and-toolkit.md
docs/superpowers/handoffs/: 2026-05-18-active-pause-wiring.md  2026-05-18-chat-pause-checkpoint-envelope.md  2026-05-18-chat-resume-task-execution.md  2026-05-18-cli-pause-resume-discovery.md  2026-05-18-core-pause-signal.md  2026-05-18-pause-resume-foundation.md  2026-05-18-paused-task-reader-projection.md  2026-05-18-runtime-pause-checkpoint-reader.md  2026-05-18-shortline-stage-1.md  2026-05-18-shortline-stage-2.md  2026-05-18-suspended-background-resume-design.md  2026-05-19-default-config-discovery.md  2026-05-19-manual-test-readiness.md  2026-05-19-real-provider-test-questions.md  2026-05-19-resume-task-list-discovery.md  2026-05-19-resume-task-negative-paths.md  2026-05-19-resume-task-number-selector.md  2026-05-19-resume-task-profile-preflight.md
docs/superpowers/plans/: 2026-05-17-cli-chat-list-commands.md  2026-05-17-cli-config-validate.md  2026-05-17-cli-continue-latest.md  2026-05-17-cli-doctor-text.md  2026-05-17-cli-events-command.md  2026-05-17-cli-file-chat.md  2026-05-17-cli-json-chat-output.md  2026-05-17-cli-numbered-session-resume.md  2026-05-17-cli-profiles-command.md  2026-05-17-cli-repl-cancel-command.md  2026-05-17-cli-repl-local-ergonomics.md  2026-05-17-cli-repl-paste-mode.md  2026-05-17-cli-repl-startup-doctor.md  2026-05-17-cli-repl.md  2026-05-17-cli-replay-command.md  2026-05-17-cli-runtime-v2.md  2026-05-17-cli-session-continuation.md  2026-05-17-cli-startup-resume.md  2026-05-17-cli-stdin-chat.md  2026-05-17-cli-top-level-sessions.md  2026-05-17-cli-transcript-command.md  2026-05-17-run-cancellation-controls.md  2026-05-18-cli-repl-active-cancel.md  2026-05-18-context-handle-projection.md  2026-05-18-context-handles-ui-gate.md  2026-05-18-pause-resume-foundation.md
docs/superpowers/specs/: 2026-05-17-cli-chat-list-commands-design.md  2026-05-17-cli-config-validate-design.md  2026-05-17-cli-continue-latest-design.md  2026-05-17-cli-doctor-text-design.md  2026-05-17-cli-events-command-design.md  2026-05-17-cli-file-chat-design.md  2026-05-17-cli-json-chat-output-design.md  2026-05-17-cli-numbered-session-resume-design.md  2026-05-17-cli-profiles-command-design.md  2026-05-17-cli-repl-cancel-command-design.md  2026-05-17-cli-repl-design.md  2026-05-17-cli-repl-local-ergonomics-design.md  2026-05-17-cli-repl-paste-mode-design.md  2026-05-17-cli-repl-startup-doctor-design.md  2026-05-17-cli-replay-command-design.md  2026-05-17-cli-runtime-v2-design.md  2026-05-17-cli-session-continuation-design.md  2026-05-17-cli-startup-resume-design.md  2026-05-17-cli-stdin-chat-design.md  2026-05-17-cli-top-level-sessions-design.md  2026-05-17-cli-transcript-command-design.md  2026-05-18-context-handle-projection-design.md  2026-05-18-context-handles-ui-gate-design.md  2026-05-18-pause-resume-foundation-design.md  2026-05-18-suspended-background-resume-design.md
