[workspace]
members = [
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/protocol",
    "crates/providers",
    "crates/storage",
    "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/AICode-Nexus/tessera"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
