[package]
name = "tessera-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tessera-config = { path = "../config" }
tessera-core = { path = "../core" }
tessera-providers = { path = "../providers" }
tessera-storage = { path = "../storage" }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
