[package]
name = "tessera-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tessera-protocol = { path = "../protocol" }
ts-rs = { workspace = true, optional = true }

[features]
bindings = ["dep:ts-rs", "tessera-protocol/bindings"]
