[package]
name = "tessera-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
serde_json.workspace = true
tessera-protocol = { path = "../protocol" }
tessera-providers = { path = "../providers" }
tessera-storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
