[package]
name = "tessera-gui-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tessera-client = { path = "../client", features = ["bindings"] }
tessera-gui-bridge = { path = "../gui-bridge", features = ["bindings"] }
tessera-protocol = { path = "../protocol", features = ["bindings"] }
ts-rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
