[package]
name = "tessera-gui-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tessera-client = { path = "../client" }
tessera-protocol = { path = "../protocol" }
thiserror.workspace = true
ts-rs = { workspace = true, optional = true }

[features]
bindings = [
    "dep:ts-rs",
    "tessera-client/bindings",
    "tessera-protocol/bindings",
]
