[package]
name = "tessera-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
ts-rs = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
bindings = ["dep:ts-rs"]
