[package]
name = "tessera-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tessera-protocol = { path = "../protocol" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
